@@ -1,5 +1,6 @@
 This file shows the changes in this release of xPDO.
 
+- Fix handling of driverOptions in xPDOConnection instances
 - [#6240] Derivative-only fields marked lazy in base classes
 
 xPDO 2.2.1-pl (December 2, 2011)
